Add Tableau integration: dashboard component, setup guides, and frontend updates

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>OnlyJobs - Job Application Tracker</title>
+    <!-- Tableau Embedding API v3 - Load dynamically with fallbacks -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
